some files changed

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,9 +3,7 @@
 import "tailwindcss";
 ---
 <nav class="flex space-around list-none justify-around p-3">
-    <li><a href="/">Главная</a></li>
-    <li><a href="/portfolio">Портфолио</a></li>
-    <li> <a href="/prices">Цены</a></li>
+    <li><a href="/">Main page</a></li>
     <li> <a href="/jokes">Jokes</a></li>
     <li> <a href="/dark">Dark jokes</a></li>
 </nav>
