--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,9 +2,9 @@
 import Layout from "../layouts/Layout.astro"
 import '../styles/global.css'
 ---
-<Layout  title="Главная страница">
-	<div class="container mx-2.5">
-		<h1>Главная</h1>
+<Layout  title="Main page">
+	<div class="container mx-5">
+		<h1 class="font-black text-4xl text-red-400">It's jokes site! Please choose category above</h1>
 	</div>
 	
 </Layout>
